--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <h1>Primeira pagina</h1>
         <p>Isso aqui é um paragrafo</p>
+        <img src="imagens/images.jpeg" alt="tigre">
     </main>
     <footer>
         <p>Colégio Tarquinio</p>
